--- a/EasyNetqQuickstartSubscriber/EasyNetqQuickstartSubscriber.csproj
+++ b/EasyNetqQuickstartSubscriber/EasyNetqQuickstartSubscriber.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="7.6.0" />
+    <PackageReference Include="EasyNetQ.Serialization.NewtonsoftJson" Version="7.6.0" />
   </ItemGroup>
 
   <ItemGroup>
