--- a/NamedQueuePublisher/NamedQueuePublisher.csproj
+++ b/NamedQueuePublisher/NamedQueuePublisher.csproj
@@ -1,13 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EasyNetQ" Version="7.6.0" />
+    <PackageReference Include="EasyNetQ.Serialization.NewtonsoftJson" Version="7.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EasyNetqMessages\EasyNetqMessages.csproj" />
   </ItemGroup>
 
 </Project>
